컨텐츠 주석 정리

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 
 <!--
-    PWA 설치를 위한 버튼을 제공
+PWA 설치를 위한 버튼을 제공
 <button type="button" class="js_button" style="display:none;">버튼</button>
 <button type="button" class="js_btn_push">푸시</button>
 -->
@@ -351,25 +351,8 @@
         <div class="pop_view_in">
             <h2 class="title">Web/mobile</h2>
             <p class="hashtag">#온디스크 사이트, #메인 리뉴얼, 사이트 유지보수</p>
-            <p class="link"><!--a href="#">사이트 바로가기</a--></p>
-            <div class="view">
-                <!--div class="explain pop_up_default">
-                    <img src="image/main_view1.jpg" alt="">
-                    <p class="txt">- 온디스크 메인으로 프레임셋 구조로 되어있으며 Html, Css, Javascript로 구현함</p>
-                </div>
-                <div class="explain pop_up_default">
-                    <img src="image/main_view1.jpg" alt="">
-                    <p class="txt">- 온디스크 메인으로 프레임셋 구조로 되어있으며 Html, Css, Javascript로 구현함</p>
-                </div>
-                <div class="explain pop_up_default">
-                    <img src="image/main_view1.jpg" alt="">
-                    <p class="txt">- 온디스크 메인으로 프레임셋 구조로 되어있으며 Html, Css, Javascript로 구현함</p>
-                </div>
-                <div class="explain pop_up_default">
-                    <img src="image/main_view1.jpg" alt="">
-                    <p class="txt">- 온디스크 메인으로 프레임셋 구조로 되어있으며 Html, Css, Javascript로 구현함</p>
-                </div-->
-            </div>
+            <p class="link"></p>
+            <div class="view"></div>
             <p class="btn_close">
                 <a href="#">
                     닫기
@@ -411,57 +394,6 @@
     <!-- 라운드 아이콘 Bg -->
     <div class="bg_circle bg_circle_1"></div>
     <!-- //라운드 아이콘 Bg -->
-
-    <!-- 배경 아이콘 Bg -->
-    <!--div class="bg_defalut bg_circle_3">
-        <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
-            <g transform="translate(121.78795623779297, 47.74541473388672)">
-                <defs>
-                    <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                        <stop offset="0%" style="stop-color: rgb(238, 205, 163);"></stop>
-                        <stop offset="100%" style="stop-color: rgb(239, 98, 159);"></stop>
-                    </linearGradient>
-                </defs>
-                <path fill="url(#gradient)">
-                    <animate attributeName="d"
-                        dur="10000ms"
-                        repeatCount="indefinite"
-                        values="M447.5,312.5Q422,375,370,417.5Q318,460,255.5,443.5Q193,427,129.5,405.5Q66,384,74,317Q82,250,92,196.5Q102,143,145,101Q188,59,247,69Q306,79,368.5,98.5Q431,118,452,184Q473,250,447.5,312.5Z;
-                        M399.5,303Q396,356,353.5,397Q311,438,254.5,424Q198,410,131,397.5Q64,385,81.5,317.5Q99,250,81,182Q63,114,122,76Q181,38,252.5,30Q324,22,353,88Q382,154,392.5,202Q403,250,399.5,303Z;
-                        M437.5,301.5Q392,353,357,412Q322,471,260,440Q198,409,161.5,375Q125,341,110,295.5Q95,250,100.5,197.5Q106,145,145,96Q184,47,243,68Q302,89,359,109Q416,129,449.5,189.5Q483,250,437.5,301.5Z;
-                        M438,317.5Q436,385,380,431.5Q324,478,257.5,454.5Q191,431,150,391.5Q109,352,80.5,301Q52,250,57.5,182Q63,114,123,79.5Q183,45,248.5,49Q314,53,367.5,89.5Q421,126,430.5,188Q440,250,438,317.5Z;
-                        M447.5,312.5Q422,375,370,417.5Q318,460,255.5,443.5Q193,427,129.5,405.5Q66,384,74,317Q82,250,92,196.5Q102,143,145,101Q188,59,247,69Q306,79,368.5,98.5Q431,118,452,184Q473,250,447.5,312.5Z"
-                    >
-                    </animate>
-                </path>
-            </g>
-        </svg>
-    </div>
-    <div class="bg_defalut bg_circle_3">
-        <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
-            <g transform="translate(121.78795623779297, 47.74541473388672)">
-                <defs>
-                    <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                        <stop offset="0%" style="stop-color: rgb(238, 205, 163);"></stop>
-                        <stop offset="100%" style="stop-color: rgb(239, 98, 159);"></stop>
-                    </linearGradient>
-                </defs>
-                <path fill="url(#gradient)">
-                    <animate attributeName="d"
-                        dur="10000ms"
-                        repeatCount="indefinite"
-                        values="M447.5,312.5Q422,375,370,417.5Q318,460,255.5,443.5Q193,427,129.5,405.5Q66,384,74,317Q82,250,92,196.5Q102,143,145,101Q188,59,247,69Q306,79,368.5,98.5Q431,118,452,184Q473,250,447.5,312.5Z;
-                        M399.5,303Q396,356,353.5,397Q311,438,254.5,424Q198,410,131,397.5Q64,385,81.5,317.5Q99,250,81,182Q63,114,122,76Q181,38,252.5,30Q324,22,353,88Q382,154,392.5,202Q403,250,399.5,303Z;
-                        M437.5,301.5Q392,353,357,412Q322,471,260,440Q198,409,161.5,375Q125,341,110,295.5Q95,250,100.5,197.5Q106,145,145,96Q184,47,243,68Q302,89,359,109Q416,129,449.5,189.5Q483,250,437.5,301.5Z;
-                        M438,317.5Q436,385,380,431.5Q324,478,257.5,454.5Q191,431,150,391.5Q109,352,80.5,301Q52,250,57.5,182Q63,114,123,79.5Q183,45,248.5,49Q314,53,367.5,89.5Q421,126,430.5,188Q440,250,438,317.5Z;
-                        M447.5,312.5Q422,375,370,417.5Q318,460,255.5,443.5Q193,427,129.5,405.5Q66,384,74,317Q82,250,92,196.5Q102,143,145,101Q188,59,247,69Q306,79,368.5,98.5Q431,118,452,184Q473,250,447.5,312.5Z"
-                    >
-                    </animate>
-                </path>
-            </g>
-        </svg>
-    </div-->
-    <!-- //배경 아이콘 Bg -->
 </div>
 <!-- //[Layout] - Wrap -->
 
