--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- //PWA ISO Link -->
 
     <!-- 홈 화면에서 표시되는 앱 아이콘을 지정 -->
-    <link rel="stylesheet" href="/portfolio/css/scss/ui.css">
+    <link rel="stylesheet" href="/portfolio/css/ui.css">
     <script type="text/javascript" src="https://storage.googleapis.com/workbox-cdn/releases/3.4.1/workbox-sw.js"></script>
     <!--script type="text/javascript" src="/portfolio/js/ui/pwa.js" charset="utf-8"></script-->
     <script type="text/javascript" src="/portfolio/js/ui/ui_class.js" charset="utf-8"></script>
