Css 및 Js 경로 수정

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <!-- //Manifest -->
 
     <!-- PWA ISO Link -->
-    <link rel="apple-touch-icon" sizes="96x96" href="/portfolio/image/favicon/icon-96x96.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/portfolio/image/favicon/icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/portfolio/image/favicon/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="96x96" href="./image/favicon/icon-96x96.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./image/favicon/icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="./image/favicon/icon-192x192.png">
     <!-- //PWA ISO Link -->
 
     <!-- 홈 화면에서 표시되는 앱 아이콘을 지정 -->
-    <link rel="stylesheet" href="/portfolio/css/scss/ui.css">
+    <link rel="stylesheet" href="./css/ui.css">
     <script type="text/javascript" src="https://storage.googleapis.com/workbox-cdn/releases/3.4.1/workbox-sw.js"></script>
-    <!--script type="text/javascript" src="/portfolio/js/pwa.js" charset="utf-8"></script-->
-    <script type="text/javascript" src="/portfolio/js/ui_class.js" charset="utf-8"></script>
+    <!--script type="text/javascript" src="./js/pwa.js" charset="utf-8"></script-->
+    <script type="text/javascript" src="./js/ui_class.js" charset="utf-8"></script>
     <script type="text/javascript">
     if ( 'serviceWorker' in navigator ) {
         window.addEventListener('load', function(){
