--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             navigator.serviceWorker.register('service-worker.js');
         });
     }
+    console.log("11");
     </script>
 </head>
 <body>
